CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)
PROJECT(nupic)

# Preferences
SET(HEADER_GROUP_PREFIX "Header Files")
SET(SOURCE_GROUP_PREFIX "Source Files")
SET(PREDEFINED_TARGETS_FOLDER "CMake Predefined Targets")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/static)

# Global Settings
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER ${PREDEFINED_TARGETS_FOLDER})

ADD_SUBDIRECTORY(nupic.core)
ADD_SUBDIRECTORY(nupic.core.cs)
ADD_SUBDIRECTORY(nupic.core.py)