PROJECT(nupic.core.cs)

# Directories
SET(NUPIC_CS_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

# Files
FILE(GLOB_RECURSE SOURCES "${NUPIC_CS_SOURCE_DIR}/*")

# Library
ADD_LIBRARY(nupic.core.cs SHARED ${SOURCES})

# Includes
TARGET_INCLUDE_DIRECTORIES(nupic.core.cs PRIVATE ${NUPIC_HEADER_DIR})

# Filters
SOURCE_GROUP(TREE ${NUPIC_CS_SOURCE_DIR} PREFIX ${SOURCE_GROUP_PREFIX} FILES ${SOURCES})

# References
TARGET_LINK_LIBRARIES(nupic.core.cs PRIVATE nupic.core)

# Compiler Options
STRING(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")

SET_TARGET_PROPERTIES(nupic.core.cs PROPERTIES COMMON_LANGUAGE_RUNTIME "")

TARGET_COMPILE_OPTIONS(nupic.core.cs PRIVATE /EHa)