PROJECT(nupic.core)

# Directories
SET(NUPIC_HEADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/nupic")
SET(NUPIC_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

# Files
FILE(GLOB_RECURSE HEADERS "${NUPIC_HEADER_DIR}/*")
FILE(GLOB_RECURSE SOURCES "${NUPIC_SOURCE_DIR}/*")

# Library
ADD_LIBRARY(nupic.core STATIC ${HEADERS} ${SOURCES})

# Includes
TARGET_INCLUDE_DIRECTORIES(nupic.core PUBLIC include)

# Filters
SOURCE_GROUP(TREE ${NUPIC_HEADER_DIR} PREFIX ${HEADER_GROUP_PREFIX} FILES ${HEADERS})
SOURCE_GROUP(TREE ${NUPIC_SOURCE_DIR} PREFIX ${SOURCE_GROUP_PREFIX} FILES ${SOURCES})

# Boost
FIND_PACKAGE(Boost REQUIRED)
TARGET_LINK_LIBRARIES(nupic.core PRIVATE ${Boost_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(nupic.core PRIVATE ${Boost_INCLUDE_DIRS})

# Yaml
FIND_PACKAGE(yaml-cpp REQUIRED)
TARGET_LINK_LIBRARIES(nupic.core PRIVATE yaml-cpp)

# ZLib
FIND_PACKAGE(ZLib REQUIRED)
TARGET_LINK_LIBRARIES(nupic.core PRIVATE ${ZLib_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(nupic.core PRIVATE ${ZLib_INCLUDE_DIRS})